[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = { version = "1.26.0", features = ["time"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_urlencoded = "0.7.1"
log = "0.4.22"
toml = "0.8.19"
cargo-manifest = "0.17.0"
serde_with = "3.11.0"
serde_yml = "0.0.12"
leaky-bucket = "1.1.2"
serde_json = "1.0.133"
rand = "0.8.5"
